# OnTrack

./: .gitignore  CLAUDE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FIXES_APPLIED.md  GITHUB_SETUP.sh  MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.txt  pyproject.toml  setup_github.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
dashboard/: app.py  main.py  test_components.py
dashboard/network/: udp_receiver.py
dashboard/settings/: config_manager.py  settings_dialog.py
dashboard/widgets/: gear_display.py  lap_times.py  pedals.py  rpm_bar.py  speed_gauge.py  tire_temps.py
game_plugin/: OnTrack.ini  OnTrack.py  config.ini  config.py
ontrack_dashboard/: __init__.py  __main__.py  app.py  logging_bridge.py  main.py  telemetry.py  theme.py
ontrack_dashboard/network/: shared_memory.py  udp_receiver.py
ontrack_dashboard/settings/: config_manager.py  settings_dialog.py
ontrack_dashboard/widgets/: acceleration_display.py  assists_card.py  car_info_panel.py  card.py  circuit_map_card.py  console_window.py  fuel_display.py  input_graph.py  pedals_card.py  race_stats_panel.py  shift_indicator.py  speed_display.py  wheel_temps_card.py
scripts/: monitor.py
tests/: test_shared_memory.py  test_telemetry.py
