[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontrack-dashboard"
version = "0.2.0"
description = "Real-time telemetry dashboard for Assetto Corsa"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chrixco" }]
keywords = ["assetto-corsa", "telemetry", "sim-racing", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "PyQt6>=6.4,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
ontrack = "ontrack_dashboard.main:main"

[project.urls]
Homepage = "https://github.com/Chrixco/OnTrack"
Issues = "https://github.com/Chrixco/OnTrack/issues"

[tool.setuptools.packages.find]
include = ["ontrack_dashboard*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
]
ignore = [
    "E501",          # long lines (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
